gatekeeper/mydemo/constraints/k8singressgipimmutable-dryrun.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sIngressGIPImmutable
metadata:
  name: ingress-gip-immutable-dryrun
spec:
  enforcementAction: dryrun
  match:
    kinds:
        # (NOTE) Fail: apiGroups: ["extensions/v1beta1"]
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
