gatekeeper/mydemo/constraints/k8singressgipimmutable.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sIngressGIPImmutable
metadata:
  name: ingress-gip-immutable
spec:
  match:
    kinds:
        # (NOTE) Fail: apiGroups: ["extensions/v1beta1"]
      - apiGroups: ["extensions"]
        kinds: ["Ingress"]
